# fxGL

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: engine.h  lin_math.h  obj_loader.h  render.h  screen.h
include/fxGL/: fxGL.h  fxMain.h  fxMath.h  fxRasterize.h  fxShader.h
src/: engine.c  lin_math.c  main.c  render.c  screen.c
src/fxGL/: fxGL.c  fxMath.c  fxRasterize.c
